# attestz

./: .codespellrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  _typos.toml  attestz_deps.bzl  attestz_go_deps.bzl  common.bzl  deps.bzl  go.mod  go.sum  regenerate-files.sh
.github/: CODEOWNERS  renovate.json
.github/linters/: .gitleaks.toml  .golangci.yml  .yaml-lint.yml  trivy.yaml
.github/workflows/: bazel.yml  go.yml  linter.yml  typo.yml
device/biz/: README.md
device/emulator/: README.md
proto/: BUILD.bazel  common_definitions.pb.go  common_definitions.proto  tpm_attestz.pb.go  tpm_attestz.proto  tpm_attestz_grpc.pb.go  tpm_enrollz.pb.go  tpm_enrollz.proto  tpm_enrollz_grpc.pb.go
proto/attestz/: BUILD.bazel  common_definitions.pb.go  common_definitions.proto  tpm_attestz.pb.go  tpm_attestz.proto  tpm_attestz_grpc.pb.go  tpm_enrollz.pb.go  tpm_enrollz.proto  tpm_enrollz_grpc.pb.go
proto/common_definitions/: common_definitions.pb.go
proto/tpm_attestz/: tpm_attestz.pb.go  tpm_attestz_grpc.pb.go
proto/tpm_enrollz/: tpm_enrollz.pb.go  tpm_enrollz_grpc.pb.go
service/biz/: BUILD.bazel  README.md  enrollz_biz.go  enrollz_biz_test.go  idevid_csr_parser_biz.go  idevid_csr_parser_biz_test.go  test_utils.go  tpm12_utils.go  tpm12_utils_test.go  tpm20_utils.go  tpm20_utils_test.go  tpm_cert_verifier.go  tpm_cert_verifier_test.go
service/biz/hmac_challenge_test_data/: BUILD.bazel  challengeResp-iak_certify_info  challengeResp-iak_certify_info_signature  challengeResp-iak_pub  csrResponse-csr_contents  csrResponse-idevid_signature_csr  iak-TPMT_PUBLIC  sensitive
service/emulator/: BUILD.bazel  README.md  enrollz_emulator.go
service/examples/: examples.go  examples_test.go
service/reference_impl/: composite_digest.go  composite_digest_test.go
