module(
    name = "openconfig_attestz",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.50.0", repo_name = "bazel_gazelle")
bazel_dep(name = "grpc", version = "1.80.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "34.0.bcr.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.60.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "7.1.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.2")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_golang_glog", "com_github_google_go_cmp", "com_github_google_go_tpm", "org_golang_google_grpc", "org_golang_google_grpc_cmd_protoc_gen_go_grpc", "org_golang_google_protobuf")
