load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:common.bzl", "use_new_compilers")

package(default_visibility = ["//visibility:public"])

use_new_compilers()

proto_library(
    name = "tpm_enrollz_proto",
    srcs = [
        "common_definitions.proto",
        "tpm_enrollz.proto",
    ],
    import_prefix = "github.com/openconfig/attestz",
)

go_proto_library(
    name = "tpm_enrollz_go_proto",
    compilers = [
        "go_protoc_gen_go",
        "go_protoc_gen_go_grpc",
    ],
    importpath = "github.com/openconfig/attestz",
    proto = ":tpm_enrollz_proto",
)

go_library(
    name = "tpm_enrollz_go",
    embed = [":tpm_enrollz_go_proto"],
    importpath = "github.com/openconfig/attestz",
)
