load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "common_definitions_proto",
    srcs = [
        "common_definitions.proto",
    ],
    import_prefix = "github.com/openconfig/attestz",
)

go_proto_library(
    name = "common_definitions_go_proto",
    importpath = "github.com/openconfig/attestz/proto/common_definitions",
    proto = ":common_definitions_proto",
)

proto_library(
    name = "tpm_enrollz_proto",
    srcs = [
        "tpm_enrollz.proto",
    ],
    import_prefix = "github.com/openconfig/attestz",
    deps = [
        ":common_definitions_proto",
    ],
)

go_proto_library(
    name = "tpm_enrollz_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/attestz/proto/tpm_enrollz",
    proto = ":tpm_enrollz_proto",
    deps = [
        ":common_definitions_go_proto",
    ],
)

go_library(
    name = "tpm_enrollz_go",
    embed = [":tpm_enrollz_go_proto"],
    importpath = "github.com/openconfig/attestz/proto/tpm_enrollz",
)

proto_library(
    name = "tpm_attestz_proto",
    srcs = [
        "tpm_attestz.proto",
    ],
    import_prefix = "github.com/openconfig/attestz",
    deps = [
        ":common_definitions_proto",
    ],
)

go_proto_library(
    name = "tpm_attestz_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/attestz/proto/tpm_attestz",
    proto = ":tpm_attestz_proto",
    deps = [
        ":common_definitions_go_proto",
    ],
)

go_library(
    name = "tpm_attestz_go",
    embed = [":tpm_attestz_go_proto"],
    importpath = "github.com/openconfig/attestz/proto/tpm_attestz",
)
