load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "attestz_proto",
    srcs = [
        "common_definitions.proto",
        "tpm_attestz.proto",
        "tpm_enrollz.proto",
    ],
    import_prefix = "github.com/openconfig/attestz",
)

go_proto_library(
    name = "attestz_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc_v2",
        "@io_bazel_rules_go//proto:go_proto",
    ],
    importpath = "github.com/openconfig/attestz/proto",
    proto = ":attestz_proto",
)

go_library(
    name = "attestz_go",
    embed = [":attestz_go_proto"],
    importpath = "github.com/openconfig/attestz/proto",
)
