# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "enrollz_biz",
    srcs = ["enrollz_biz.go"],
    embed = [":tpm_cert_verifier"],
    importpath = "github.com/openconfig/attestz/service/biz",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:common_definitions_go_proto",
        "//proto:tpm_enrollz_go",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "enrollz_biz_test",
    srcs = ["enrollz_biz_test.go"],
    embed = [":enrollz_biz"],
    deps = [
        "//proto:common_definitions_go_proto",
        "//proto:tpm_enrollz_go",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)

go_library(
    name = "tpm_cert_verifier",
    srcs = ["tpm_cert_verifier.go"],
    importpath = "github.com/openconfig/attestz/service/biz",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:common_definitions_go_proto",
        "@com_github_golang_glog//:glog",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "tpm_cert_verifier_test",
    srcs = ["tpm_cert_verifier_test.go"],
    embed = [":tpm_cert_verifier"],
    deps = [
        "//proto:common_definitions_go_proto",
        "@com_github_google_go_cmp//cmp",
    ],
)
