# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "enrollz_biz",
    srcs = ["enrollz_biz.go"],
    embed = [
        ":tpm_cert_verifier",
        ":tpm12_utils",
    ],
    importpath = "github.com/openconfig/attestz/service/biz",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:common_definitions_go_proto",
        "//proto:tpm_attestz_go_proto",
        "//proto:tpm_enrollz_go",
        "@com_github_golang_glog//:glog",
        "@com_github_google_go_tpm//tpm",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "enrollz_biz_test",
    srcs = ["enrollz_biz_test.go"],
    embed = [":enrollz_biz"],
    deps = [
        "//proto:common_definitions_go_proto",
        "//proto:tpm_attestz_go_proto",
        "//proto:tpm_enrollz_go",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_google_go_tpm//tpm",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)

go_library(
    name = "tpm_cert_verifier",
    srcs = ["tpm_cert_verifier.go"],
    importpath = "github.com/openconfig/attestz/service/biz",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:common_definitions_go_proto",
        "//proto:tpm_attestz_go_proto",
        "@com_github_golang_glog//:glog",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "tpm_cert_verifier_test",
    srcs = ["tpm_cert_verifier_test.go"],
    embed = [":tpm_cert_verifier"],
    deps = [
        "//proto:common_definitions_go_proto",
        "//proto:tpm_attestz_go_proto",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)

go_library(
    name = "idevid_csr_parser_biz",
    srcs = ["idevid_csr_parser_biz.go"],
    importpath = "github.com/openconfig/attestz/service/biz",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@com_github_google_go_tpm//tpm2",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "idevid_csr_parser_biz_test",
    srcs = ["idevid_csr_parser_biz_test.go"],
    embed = [
        ":idevid_csr_parser_biz",
        ":test_utils",
    ],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_google_go_tpm//tpm2",
    ],
)

go_library(
    name = "tpm12_utils",
    srcs = ["tpm12_utils.go"],
    embed = [":idevid_csr_parser_biz"],
    importpath = "github.com/openconfig/attestz/service/biz",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_tpm//tpm",
    ],
)

go_test(
    name = "tpm12_utils_test",
    srcs = ["tpm12_utils_test.go"],
    embed = [
        ":tpm12_utils",
        ":test_utils",
    ],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_tpm//tpm",
    ],
)

go_library(
    name = "tpm20_utils",
    srcs = ["tpm20_utils.go"],
    importpath = "github.com/openconfig/attestz/service/biz",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_go_tpm//tpm2",
    ],
)

go_library(
    name = "test_utils",
    srcs = ["test_utils.go"],
    importpath = "github.com/openconfig/attestz/service/biz",
    visibility = ["//visibility:public"],
    deps = [],
)
